--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   width: 100%;
   height: 100%;
-  overflow-x:hidden;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
 
-
+a {
+  text-decoration: none;
+}
