--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,30 @@
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  font-family: "Pretendard Variable";
 }
 
 a {
   text-decoration: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(0, 0, 0, 0.6);
 }
